将List.of替换为Arrays.asList以提升部分性能